<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/prefs_title_player">
        <ListPreference android:key="pref_key_shuffle_play"
            android:title="@string/pref_title_shuffle_play"
            android:entries="@array/pref_entries_shuffle_play"
            android:entryValues="@array/pref_entry_values_shuffle_play"
            android:defaultValue="0"
            />
        <ListPreference android:key="pref_key_loop_play"
            android:dependency="pref_key_loop_play"
            android:title="@string/pref_title_loop_play"
            android:entries="@array/pref_entries_loop_play"
            android:entryValues="@array/pref_entry_values_loop_play"
            android:defaultValue="0"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_title_network">
        <EditTextPreference android:key="pref_key_server"
            android:title="@string/pref_title_server"
            android:defaultValue="http://www.tongrenlu.info" />
        <CheckBoxPreference android:key="pref_key_wifi_only"
            android:title="@string/pref_title_wifi_only"
            android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_title_other">
        <Preference android:key="pref_key_clear_cache"
            android:title="@string/pref_title_clear_cache"/>
        <Preference android:key="pref_key_clear_data"
            android:title="@string/pref_title_clear_data"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/prefs_title_version">
        <Preference android:key="pref_key_version_name"
            android:title="@string/pref_title_version_name" />
        <Preference android:key="pref_key_next_update_date"
            android:title="@string/pref_title_next_update_date" />
        <Preference android:key="pref_key_check_update"
            android:title="@string/pref_title_check_update" >
        </Preference>
        <Preference android:title="@string/pref_title_web" >
            <intent android:action="android.intent.action.VIEW" 
                android:data="http://www.tongrenlu.info" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>