<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <TextView android:id="@+id/track_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dip"
        android:layout_marginTop="8dip"
        android:singleLine="true"
        android:text="@string/track_title"
    />

    <TextView android:id="@+id/track_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/track_title"
        android:layout_alignLeft="@+id/track_title"
        android:text="@string/track_artist"
    />
    
    <ImageButton android:id="@+id/action_play" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/action_download"
        android:src="@android:drawable/ic_media_play"
        android:contentDescription="@string/action_play"/>
    
    <ImageButton android:id="@+id/action_download" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:src="@android:drawable/ic_menu_save"
        android:contentDescription="@string/action_download"/>
</RelativeLayout>