<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:slideexpandable="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">
    <RelativeLayout android:id="@+id/item"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_xs">
        <ImageView android:id="@+id/article_cover"
                android:contentDescription="@string/article_cover"
                android:layout_width="@dimen/image_xs"
                android:layout_height="@dimen/image_xs"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop" />
        <TextView android:id="@+id/track_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/article_cover"
                android:layout_alignParentTop="true"
                android:singleLine="true"
                android:ellipsize="start"
                android:text="@string/track_title"
                android:textSize="16sp"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"/>
        <TextView android:id="@+id/track_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/track_title"
                android:layout_toRightOf="@+id/article_cover"
                android:singleLine="true"
                android:ellipsize="start"
                android:text="@string/track_artist"
                android:textSize="12sp"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"/>
        <ImageButton android:id="@id/expandable_toggle_button"
                android:src="@android:drawable/ic_menu_more"
                android:contentDescription="@string/label_more"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/image_xs"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>
    
    <LinearLayout android:id="@id/expandable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#000000">
            <Button android:id="@+id/action_play" 
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableTop="@android:drawable/ic_media_play"
                android:text="@string/action_play"/>
            
            <Button android:id="@+id/action_delete" 
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:drawableTop="@android:drawable/ic_menu_delete"
                android:text="@string/action_delete"/>
    </LinearLayout>
</LinearLayout>